import java.util.ArrayList;

public class ImpresoraPeliculas {
    public void imprimirPeliculas(ArrayList<Pelicula> peliculas) {
        for (Pelicula pelicula : peliculas) {
            System.out.println(pelicula);
        }
    }
}
